Add client list

--- a/src/AppBundle/Resources/views/Layout/navigation.html.twig
+++ b/src/AppBundle/Resources/views/Layout/navigation.html.twig
@@ -21,7 +21,10 @@
     <div class="navigation__menu c-overflow">
         <ul>
             <li class="navigation__active">
-                <a href="index.html"><i class="zmdi zmdi-home"></i> Home</a>
+                <a href="{{ path('home') }}"><i class="zmdi zmdi-home"></i> Home</a>
+            </li>
+            <li class="navigation__active">
+                <a href="{{ path('clients_list') }}"><i class="zmdi zmdi-accounts"></i> Clients</a>
             </li>
         </ul>
     </div>
