Add invoice list

--- a/src/AppBundle/Resources/views/Layout/header.html.twig
+++ b/src/AppBundle/Resources/views/Layout/header.html.twig
@@ -14,7 +14,7 @@
         </li>
         <li class="top-menu__profile dropdown">
             <a data-toggle="dropdown" href="">
-                <img src="img/profile-pics/1.jpg" alt="">
+                <img src="{{ asset('img/2.jpg') }}" alt="">
             </a>
 
             <ul class="dropdown-menu pull-right dropdown-menu--icon">
