--- a/src/AppBundle/Resources/views/Layout/navigation.html.twig
+++ b/src/AppBundle/Resources/views/Layout/navigation.html.twig
@@ -23,8 +23,11 @@
             <li class="navigation__active">
                 <a href="{{ path('home') }}"><i class="zmdi zmdi-home"></i> Home</a>
             </li>
-            <li class="navigation__active">
+            <li>
                 <a href="{{ path('clients_list') }}"><i class="zmdi zmdi-accounts"></i> Clients</a>
+            </li>
+            <li>
+                <a href="{{ path('invoices_list') }}"><i class="zmdi zmdi-file-text"></i> Factures</a>
             </li>
         </ul>
     </div>
