--- a/src/AppBundle/Resources/views/Layout/footer.html.twig
+++ b/src/AppBundle/Resources/views/Layout/footer.html.twig
@@ -1,3 +1,1 @@
-<footer id="footer">
-    Copyright &copy; 2017 Zen Panda - Geoffrey Chameroy
-</footer>
+<footer id="footer">Copyright &copy; 2017 Zen Panda - Geoffrey Chameroy</footer>
