--- a/src/AppBundle/Resources/views/Layout/header.html.twig
+++ b/src/AppBundle/Resources/views/Layout/header.html.twig
@@ -1,10 +1,7 @@
 <!-- Header -->
 <header id="header">
     <div class="logo">
-        <a href="index.html" class="hidden-xs">
-            Material
-            <small>admin extended dark</small>
-        </a>
+        <a href="index.html" class="hidden-xs">Material<small>admin extended dark</small></a>
         <i class="logo__trigger zmdi zmdi-menu" data-mae-action="block-open" data-mae-target="#navigation"></i>
     </div>
 
