--- a/src/AppBundle/Resources/views/Layout/navigation.html.twig
+++ b/src/AppBundle/Resources/views/Layout/navigation.html.twig
@@ -4,16 +4,13 @@
     </div>
 
     <div class="navigation__toggles">
-        <a href="" data-mae-action="block-open" data-mae-target="#notifications" data-toggle="tab"
-           data-target="#notifications__messages">
+        <a href="" data-mae-action="block-open" data-mae-target="#notifications" data-toggle="tab" data-target="#notifications__messages">
             <i class="zmdi zmdi-email"></i>
         </a>
-        <a href="" data-mae-action="block-open" data-mae-target="#notifications" data-toggle="tab"
-           data-target="#notifications__updates">
+        <a href="" data-mae-action="block-open" data-mae-target="#notifications" data-toggle="tab" data-target="#notifications__updates">
             <i class="zmdi zmdi-notifications"></i>
         </a>
-        <a href="" data-mae-action="block-open" data-mae-target="#notifications" data-toggle="tab"
-           data-target="#notifications__tasks">
+        <a href="" data-mae-action="block-open" data-mae-target="#notifications" data-toggle="tab" data-target="#notifications__tasks">
             <i class="zmdi zmdi-playlist-plus"></i>
         </a>
     </div>
