--- a/src/AppBundle/Resources/views/Layout/notifications.html.twig
+++ b/src/AppBundle/Resources/views/Layout/notifications.html.twig
@@ -1,11 +1,20 @@
 <aside id="notifications">
     <ul class="tab-nav tab-nav--justified tab-nav--icon">
-        <li><a class="user-alert__messages" href="#notifications__messages" data-toggle="tab"><i
-                        class="zmdi zmdi-email"></i></a></li>
-        <li><a class="user-alert__notifications" href="#notifications__updates" data-toggle="tab"><i
-                        class="zmdi zmdi-notifications"></i></a></li>
-        <li><a class="user-alert__tasks" href="#notifications__tasks" data-toggle="tab"><i
-                        class="zmdi zmdi-playlist-plus"></i></a></li>
+        <li>
+            <a class="user-alert__messages" href="#notifications__messages" data-toggle="tab">
+                <i class="zmdi zmdi-email"></i>
+            </a>
+        </li>
+        <li>
+            <a class="user-alert__notifications" href="#notifications__updates" data-toggle="tab">
+                <i class="zmdi zmdi-notifications"></i>
+            </a>
+        </li>
+        <li>
+            <a class="user-alert__tasks" href="#notifications__tasks" data-toggle="tab">
+                <i class="zmdi zmdi-playlist-plus"></i>
+            </a>
+        </li>
     </ul>
 
     <div class="tab-content">
