--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -1,3 +1,4 @@
+{% spaceless %}
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -13,6 +14,7 @@
 </head>
 
 <body>
+
 {{ include('AppBundle:Layout:loader.html.twig') }}
 {{ include('AppBundle:Layout:header.html.twig') }}
 
@@ -29,5 +31,9 @@
 <script src="{{ asset('Material/js/jquery-v2.1.4.min.js') }}"></script>
 <script src="{{ asset('Material/js/bootstrap.min.js') }}"></script>
 <script src="{{ asset('Material/js/app.min.js') }}"></script>
+<script src="{{ asset('Material/js/plugins/collection-form/jquery.collection.js') }}"></script>
+
+{% block javascript '' %}
 </body>
 </html>
+{% endspaceless %}
