Feature - List, View PDF, Add Quotation

--- a/src/AppBundle/Resources/views/Layout/navigation.html.twig
+++ b/src/AppBundle/Resources/views/Layout/navigation.html.twig
@@ -26,6 +26,9 @@
             <li>
                 <a href="{{ path('invoices_list') }}"><i class="zmdi zmdi-file-text"></i> Factures</a>
             </li>
+            <li>
+                <a href="{{ path('quotations_list') }}"><i class="zmdi zmdi-file-text"></i> Devis</a>
+            </li>
         </ul>
     </div>
 </aside>
