--- a/src/AppBundle/Resources/views/Quotation/list.html.twig
+++ b/src/AppBundle/Resources/views/Quotation/list.html.twig
@@ -1,11 +1,11 @@
 {% extends 'AppBundle::base.html.twig' %}
 
-{% block title parent() ~ ' - ' ~ 'invoice-list.meta-title'|trans %}
+{% block title parent() ~ ' - ' ~ 'quotation-list.meta-title'|trans %}
 
 {% block header %}
     <section id="content">
         <div class="content__header">
-            <h2>Factures</h2>
+            <h2>Devis</h2>
         </div>
     </section>
 {% endblock %}
@@ -13,8 +13,8 @@
 {% block body %}
     <div class="card">
         <div class="card__header action-header">
-            <div class="action-header__label">Liste des factures</div>
-            <a href="{{ path('invoices_add') }}" class="btn btn--float"><i class="zmdi zmdi-plus"></i></a>
+            <div class="action-header__label">Liste des devis</div>
+            <a href="{{ path('quotations_add') }}" class="btn btn--float"><i class="zmdi zmdi-plus"></i></a>
         </div>
         <div class="card__body m-t-30">
             <div class="table-responsive">
@@ -30,16 +30,16 @@
                     </tr>
                     </thead>
                     <tbody>
-                    {% for invoice in invoices %}
+                    {% for quotation in quotations %}
                         <tr>
-                            <td>{{ invoice.id }}</td>
-                            <td>{{ invoice.date|date('d/m/Y') }}</td>
-                            <td>{{ invoice.reference }}</td>
-                            <td>{{ invoice.client.company }}</td>
-                            <td class="text-right">{{ invoice.amount|number_format(2, ',', ' ') }} €</td>
+                            <td>{{ quotation.id }}</td>
+                            <td>{{ quotation.date|date('d/m/Y') }}</td>
+                            <td>{{ quotation.reference }}</td>
+                            <td>{{ quotation.client.company }}</td>
+                            <td class="text-right">{{ quotation.amount|number_format(2, ',', ' ') }} €</td>
                             <td class="text-right">
                                 <a class="btn btn--light">Détails</a>
-                                <a target="_blank" href="{{ path('office_invoice_view', {reference: invoice.reference, _format: 'pdf'}) }}" class="btn btn-default">
+                                <a target="_blank" href="{{ path('office_quotation_view', {reference: quotation.reference, _format: 'pdf'}) }}" class="btn btn-default">
                                     <i class="zmdi zmdi-download"></i>
                                 </a>
                             </td>
