Feature - Add a client

--- a/src/AppBundle/Resources/views/Client/list.html.twig
+++ b/src/AppBundle/Resources/views/Client/list.html.twig
@@ -14,7 +14,7 @@
     <div class="card">
         <div class="card__header action-header">
             <div class="action-header__label">Liste des clients</div>
-            <button class="btn btn--float"><i class="zmdi zmdi-plus"></i></button>
+            <a href="{{ path('clients_add') }}" class="btn btn--float"><i class="zmdi zmdi-plus"></i></a>
         </div>
         <div class="card__body m-t-30">
             <div class="card__body">
