--- a/src/AppBundle/Resources/views/Invoice/add.html.twig
+++ b/src/AppBundle/Resources/views/Invoice/add.html.twig
@@ -28,6 +28,6 @@
 
 {% block javascript %}
     <script type="text/javascript">
-        $('.my-selector').collection();
+        $('.form-collection').collection();
     </script>
 {% endblock %}
