--- a/src/AppBundle/Resources/views/Quotation/view_pdf.html.twig
+++ b/src/AppBundle/Resources/views/Quotation/view_pdf.html.twig
@@ -64,7 +64,7 @@
             </thead>
             <tbody>
             <tr>
-                <td>{{ quotation.description|nl2br|markdown }}</td>
+                <td>{{ quotation.description|md2html }}</td>
             </tr>
             </tbody>
         </table>
