--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -8,6 +8,7 @@
 
     <link href="{{ asset('Material/css/animate.min.css') }}" rel="stylesheet">
     <link href="{{ asset('Material/css/font/iconic/material-design-iconic-font.min.css') }}" rel="stylesheet">
+    <link href="{{ asset('Material/plugins/eonasdan-bootstrap-datetimepicker/bootstrap-datetimepicker.min.css') }}" rel="stylesheet">
     <link href="{{ asset('Material/css/app.min.css') }}" rel="stylesheet">
 
     <script src="{{ asset('Material/js/page-loader.min.js') }}"></script>
@@ -30,8 +31,10 @@
 
 <script src="{{ asset('Material/js/jquery-v2.1.4.min.js') }}"></script>
 <script src="{{ asset('Material/js/bootstrap.min.js') }}"></script>
+<script src="{{ asset('Material/plugins/moment/moment.min.js') }}"></script>
+<script src="{{ asset('Material/plugins/eonasdan-bootstrap-datetimepicker/bootstrap-datetimepicker.min.js') }}"></script>
+<script src="{{ asset('Material/plugins/collection-form/jquery.collection.js') }}"></script>
 <script src="{{ asset('Material/js/app.min.js') }}"></script>
-<script src="{{ asset('Material/js/plugins/collection-form/jquery.collection.js') }}"></script>
 
 {% block javascript '' %}
 </body>
