Feature - Login form

--- a/src/AppBundle/Resources/views/Layout/header.html.twig
+++ b/src/AppBundle/Resources/views/Layout/header.html.twig
@@ -16,10 +16,7 @@
 
             <ul class="dropdown-menu pull-right dropdown-menu--icon">
                 <li>
-                    <a href="profile-about.html"><i class="zmdi zmdi-account"></i> View Profile</a>
-                </li>
-                <li>
-                    <a href=""><i class="zmdi zmdi-time-restore"></i> Logout</a>
+                    <a href="{{ path('logout') }}"><i class="zmdi zmdi-time-restore"></i> Logout</a>
                 </li>
             </ul>
         </li>
