--- a/src/AppBundle/Resources/views/base.html.twig
+++ b/src/AppBundle/Resources/views/base.html.twig
@@ -35,6 +35,11 @@
     <script src="{{ asset('Material/plugins/moment/moment.min.js') }}"></script>
     <script src="{{ asset('Material/plugins/eonasdan-bootstrap-datetimepicker/bootstrap-datetimepicker.min.js') }}"></script>
     <script src="{{ asset('Material/plugins/collection-form/jquery.collection.js') }}"></script>
+    <script src="{{ asset('Material/plugins/flot-charts/jquery.flot.min.js') }}"></script>
+    <script src="{{ asset('Material/plugins/flot-charts/jquery.flot.resize.min.js') }}"></script>
+    <script src="{{ asset('Material/plugins/flot-charts/jquery.flot.tooltip.min.js') }}"></script>
+    <script src="{{ asset('Material/plugins/flot-charts/jquery.flot.pie.min.js') }}"></script>
+    <script src="{{ asset('Material/plugins/flot-charts/jquery.flot.order-bars.min.js') }}"></script>
     <script src="{{ asset('Material/js/app.min.js') }}"></script>
 
     {% block javascript '' %}
