--- a/src/AppBundle/Resources/views/Invoice/view_pdf.html.twig
+++ b/src/AppBundle/Resources/views/Invoice/view_pdf.html.twig
@@ -56,7 +56,7 @@
     <div class="col-4">
         <p>
             <strong>FACTURER À</strong>
-            <br>{{ invoice.client.civility.label ~ ' ' ~ invoice.client.name }}
+            <br>{{ invoice.client.civility.code ~ ' ' ~ invoice.client.name }}
             {% if invoice.client.company %}
                 <br>{{ invoice.client.company }}
             {% endif %}
